--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Rajib Prasad(রাজীব প্রসাদ)"
-  avatar           : "github_prof_pic.jpg"
-  bio              : "Economist"
+  avatar           : "profile.png"
+  bio              : "Assistant Professor"
   location         : "India"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
