--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Rajib Prasad(রাজীব প্রসাদ)"
-  avatar           : "images/github_prof_pic.jpg"
+  avatar           : "github_prof_pic.jpg"
   bio              : "Assistant Professor"
   location         : "India"
   employer         :
